--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   
      
           <center>
-            <img class="circular--square" src="https://alejandraadalid.github.io/Adalid-CV/images/Diseño sin título.png " />
+            <img class="circular--square" src="" />
           </center>
       
           <p id="hello">
