--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
           </a>
           </div>
           <div class="box box5">
-            <a href="https://github.com/AlejandraAdalid" target="_blank">
+            <a href="https://github.com/Dev-Adalid" target="_blank">
             <i class="fab fa-github-alt"></i>
           </a>
           </div>
